--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div>Sign up for our product by clicking that button right over there!</div>
         <button>Sign up</button>
     </div>
+    <footer class="footer">
+        <div>Copyright C The Odin Project 2021</div>
+    </footer>
 </body>
 
 </html>
