Create HTML and CSS for website project

--- a/index.html
+++ b/index.html
@@ -9,49 +9,70 @@
 
 <body>
     <header class="header">
-        <div class="logo">Header Logo</div>
-        <ul class="header-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="header-container">
+            <div class="logo"><a href="./index.html">Header Logo</a></div>
+            <ul class="header-links">
+                <li><a href="https://www.google.com/">header link one</a></li>
+                <li><a href="https://www.google.com/">header link two</a></li>
+                <li><a href="https://www.google.com/">header link three</a></li>
+            </ul>
+        </div>
     </header>
+
     <div class="hero-section">
-        <div>This website is awesome</div>
-        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button>Sign up</button>
-        <div>this is a placeholder for an image</div>
+        <div class="hero-container">
+            <div class="hero-content">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">
+                <div>this is a placeholder for an image</div>
+            </div>
+        </div>
     </div>
+
     <div class="information-section">
-        <div>Some random information.</div>
-        <div>
-            <div class="image"></div>
-            <div>this is some subtext under an illustration or image</div>
-        </div>
-        <div>
-            <div class="image"></div>
-            <div>this is some subtext under an illustration or image</div>
-        </div>
-        <div>
-            <div class="image"></div>
-            <div>this is some subtext under an illustration or image</div>
-        </div>
-        <div>
-            <div class="image"></div>
-            <div>this is some subtext under an illustration or image</div>
+        <div class="information-header">Some random information.</div>
+        <div class="information-images">
+            <div>
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
+
     <div class="quote-section">
-        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div>-Thor, God of Thunder</div>
+        <div class="quote-container">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
     </div>
+
     <div class="signup-section">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
-        <button>Sign up</button>
+        <div class="signup-container">
+            <div>
+                <div class="call">Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
+
     <footer class="footer">
-        <div>Copyright C The Odin Project 2021</div>
+        <div>Copyright &copy; The Odin Project 2021</div>
     </footer>
 </body>
 
